added form detection

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ services:
             <!-- <div class="grid md:grid-cols-2 gap-5 items-center justify-around">
             <img src="/images/sonny-2.jpg" class="aspect-square object-cover max-h-[50vh]" style="background-position: 50% 50%;"> -->
                 <div class="block text-center">
-                    <form action="#" method="post" id="contactForm" class="inline-block mx-auto text-left min-w-[50vw]">
+                    <form name="contact" netlify class="inline-block mx-auto text-left min-w-[50vw]">
                         <label for="name" class="uppercase block  border-b-2 border-black">Name:</label>
                         <input type="text" id="name" name="name" required class="w-full block  bg-inherit focus:outline-none  placeholder:text-gray-500" placeholder="Sonny Smith">
                 
