small spacing changes

--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@ services:
 
 <section class="px-5p">
     <div class="pb-5p">
-        <h2 class=" uppercase font-light text-5xl tracking-widest py-5p text-center">Contact</h2>
+        <h2 class=" uppercase font-light text-3xl lg:text-5xl tracking-widest py-5p text-center">Contact</h2>
 
             <!-- <div class="grid md:grid-cols-2 gap-5 items-center justify-around">
             <img src="/images/sonny-2.jpg" class="aspect-square object-cover max-h-[50vh]" style="background-position: 50% 50%;"> -->
                 <div class="block text-center">
-                    <form name="contact" netlify class="inline-block mx-auto text-left min-w-[50vw]">
+                    <form name="contact" netlify class="inline-block mx-auto text-left min-w-[75]">
                         <label for="name" class="uppercase block  border-b-2 border-black">Name:</label>
                         <input type="text" id="name" name="name" required class="w-full block  bg-inherit focus:outline-none  placeholder:text-gray-500" placeholder="Sonny Smith">
                 
