font weight change

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ services:
 
     <div class="flex flex-col flex-grow space-y-4 items-center justify-center px-5">
         <h1 class="text-white uppercase font-light text-3xl lg:text-5xl tracking-widest text-center">The Sonny Co.</h1>
-        <h2 class="text-white font-medium uppercase text-center">Web Design and Development Agency</h2>
+        <h2 class="text-white uppercase text-center">Web Design and Development Agency</h2>
     </div>
 
 </section>
