font weight and form

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ services:
 
     <div class="flex flex-col flex-grow space-y-4 items-center justify-center px-5">
         <h1 class="text-white uppercase font-light text-3xl lg:text-5xl tracking-widest text-center">The Sonny Co.</h1>
-        <h2 class="text-white uppercase text-center">Web Design and Development Agency</h2>
+        <h2 class="text-white uppercase font-light text-xl text-center">Web Design and Development Agency</h2>
     </div>
 
 </section>
@@ -133,7 +133,7 @@ services:
             <!-- <div class="grid md:grid-cols-2 gap-5 items-center justify-around">
             <img src="/images/sonny-2.jpg" class="aspect-square object-cover max-h-[50vh]" style="background-position: 50% 50%;"> -->
                 <div class="block text-center">
-                    <form name="contact" netlify class="inline-block mx-auto text-left min-w-[75]">
+                    <form name="contact" netlify class="inline-block mx-auto text-left min-w-[75vw] lg:min-w-[50vw]">
                         <label for="name" class="uppercase block  border-b-2 border-black">Name:</label>
                         <input type="text" id="name" name="name" required class="w-full block  bg-inherit focus:outline-none  placeholder:text-gray-500" placeholder="Sonny Smith">
                 
