--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@ services:
   - image: /images/minimal-2.jpg
     heading: Technical Support
     description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab amet dignissimos saepe magnam temporibus libero rem error, autem consequatur, id iure esse atque adipisci magni, recusandae blanditiis at earum ipsum.
+seo: 
+    title: The Sonny Co
+    description: Welcome to The Sonny Co! We are a web design and development agency dedicated to helping small businesses accomplish big goals. 
+    keywords: 
+    social_image: /images/sonny-1.jpg
+    hide-from-google: true
 ---
 
 <!-- heading + logo + navs -->
