--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,9 @@ portfolio:
   - link: https://vh-portfolio-gym.netlify.app/
     image: /images/portfolio-gym.png
     client-name: Portfolio Project Gym
+  - link: https://vh-portfolio-bold.netlify.app/
+    image: /images/portfolio-bold.png
+    client-name: Portfolio Project Bold
 ---
 <section class="flex flex-col bg-[url('/images/vh-1.jpeg')] min-h-screen bg-cover relative" style="background-position: 50% 70%;">
     <div class="flex flex-col flex-grow space-y-4 items-center justify-center px-5">
