updates to portfolio

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ seo:
     <div class="flex flex-col flex-grow space-y-4 items-center justify-center px-5">
         <h1 class="text-white uppercase font-light text-3xl lg:text-5xl tracking-widest text-center">The Sonny Co.</h1>
         <h2 class="text-white uppercase font-light text-xl text-center">Web Design and Development Agency</h2>
+        <a href="/portfolio.html" class="text-white uppercase font-light text-xl text-center border-b-transparent hover:border-b hover:border-white">See My Work &#x276F; </a>
     </div>
 
 </section>
@@ -128,6 +129,8 @@ seo:
     </div>
 
 </section> -->
+<!-- portfolio link -->
+
 
 
 <!-- contact -->
