--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@ portfolio:
 <section class="flex flex-col bg-[url('/images/vh-1.jpeg')] min-h-screen bg-cover relative" style="background-position: 50% 70%;">
     <div class="flex flex-col flex-grow space-y-4 items-center justify-center px-5">
         <h1 class="text-white uppercase font-light text-3xl lg:text-5xl tracking-widest text-center">Portfolio</h1>
+        <a href="/portfolio.html" class="text-white uppercase font-light text-xl text-center border-b-transparent hover:border-b hover:border-white">&#x276E; Return Home </a>
     </div>
 
 </section>
