--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,12 @@ portfolio:
   - link: https://vh-portfolio-bold.netlify.app/
     image: /images/portfolio-bold.png
     client-name: Portfolio Project Bold
+seo: 
+    title: The Sonny Co. | Portfolio
+    description: Welcome to The Sonny Co! We are a web design and development agency dedicated to helping small businesses accomplish big goals. 
+    keywords: 
+    social_image: /images/sonny-1.jpg
+    hide-from-google: true
 ---
 <section class="flex flex-col bg-[url('/images/vh-1.jpeg')] min-h-screen bg-cover relative" style="background-position: 50% 70%;">
     <div class="flex flex-col flex-grow space-y-4 items-center justify-center px-5">
@@ -24,7 +30,7 @@ portfolio:
     <!-- featured -->
     <h2 class="text-center uppercase font-light text-3xl lg:text-5xl tracking-widest pb-5p ">Featured Client</h2>
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 items-center pb-5p">
-        <a href="hover:drop-shadow-3xl">
+        <a href="https://sara-schneider-goldenhour.netlify.app/" class="hover:drop-shadow-3xl">
             <img src="/images/ssgh-mockup.png" class="aspect-square object-cover object-center">
         </a>
         <div class="">
@@ -33,7 +39,7 @@ portfolio:
                 <br><br>
             Sara's vision was to create a centralized location where she could showcase her photography business, her coaching business, and her brand shop. In phase one, we worked together to identify her brand's strategy, including color palette, typefaces, and images that were well suited to her desired audience. In phase two, I went to Figma to create a web design that encompassed all of the details in phase one. Once the design gained Sara's sign-off, phase three began with custom coded website development. Using HTML for structure, Tailwind CSS for stylizing, JavaScript for interactivity and animations, and Jekyll as the site generator, The Golden Hour's website was born. 
                 <br><br>
-            <a href="https://sara-schneider.com" class="mx-auto px-5 py-2 border border-black hover:bg-black hover:text-grey w-full text-center block">Visit Site</a>
+            <a href="https://sara-schneider-goldenhour.netlify.app/" class="mx-auto px-5 py-2 border border-black hover:bg-black hover:text-grey w-full text-center block">Visit Site</a>
             </p>
         </div>
     </div>
