added target blank to link

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@ seo:
                 <br><br>
             Sara's vision was to create a centralized location where she could showcase her photography business, her coaching business, and her brand shop. In phase one, we worked together to identify her brand's strategy, including color palette, typefaces, and images that were well suited to her desired audience. In phase two, I went to Figma to create a web design that encompassed all of the details in phase one. Once the design gained Sara's sign-off, phase three began with custom coded website development. Using HTML for structure, Tailwind CSS for stylizing, JavaScript for interactivity and animations, and Jekyll as the site generator, The Golden Hour's website was born. 
                 <br><br>
-            <a href="https://sara-schneider-goldenhour.netlify.app/" class="mx-auto px-5 py-2 border border-black hover:bg-black hover:text-grey w-full text-center block">Visit Site</a>
+            <a href="https://sara-schneider-goldenhour.netlify.app/" class="mx-auto px-5 py-2 border border-black hover:bg-black hover:text-grey w-full text-center block" target="_blank">Visit Site</a>
             </p>
         </div>
     </div>
