--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@ seo:
     <!-- featured -->
     <h2 class="text-center uppercase font-light text-3xl lg:text-5xl tracking-widest pb-5p ">Featured Client</h2>
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 items-center pb-5p">
-        <a href="https://sara-schneider-goldenhour.netlify.app/" class="hover:drop-shadow-3xl">
+        <a href="https://sara-schneider-goldenhour.netlify.app/" class="hover:drop-shadow-3xl" target="_blank">
             <img src="/images/ssgh-mockup.png" class="aspect-square object-cover object-center">
         </a>
         <div class="">
