updates to home and portfolio pages

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@ seo:
         <a href="/portfolio.html" class="text-white uppercase font-light text-xl text-center border-b-transparent hover:border-b hover:border-white">See My Work &#x276F; </a>
     </div>
 
+    <div>
+        <div class="flex flex-col flex-grow space-y-4 justify-center px-5 pb-2">
+            <a href="#contact" class="text-white uppercase font-light text-xl text-center">Contact <span class="rotate-text-180-2">&#x276F;</span> </a>
+        </div>
+    </div>
 </section>
 
 <!-- services -->
@@ -135,7 +140,7 @@ seo:
 
 <!-- contact -->
 
-<section class="px-5p">
+<section class="px-5p min-h-[85vh]" id="contact">
     <div class="pb-5p">
         <h2 class=" uppercase font-light text-3xl lg:text-5xl tracking-widest py-5p text-center">Contact</h2>
 
